--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5000
 DB_URL =mongodb://localhost:27017/blog
+# DB_URL=mongodb://admin:password@mongodb:27017/blog
 BASE_URL=https://localhost:5173
 SECRET=FuckYourMoM
