--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,15 @@
-# version: "3.8"
+version: "3.8"
 
-# services:
-#   mongodb:
-#     image: mongo:latest
-#     container_name: mongodb_container
-#     ports:
-#       - "27017:27017"
-#    environment:
-#     MONGO_INITDB_ROOT_USERNAME: admin
-#     MONGO_INITDB_ROOT_PASSWORD: password
+services:
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb_container
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
 
-
-#   volumes:
-#     mongodb_data:
-#       driver: local
+volumes:
+  mongodb_data:
+    driver: local
